{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 46,
  "lineage": "d1a42909-a3b7-5551-9220-b9290f1029da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "newigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:internet-gateway/igw-0b3f4b11f40446267",
            "id": "igw-0b3f4b11f40446267",
            "owner_id": "901933808075",
            "tags": {
              "Name": "newigw"
            },
            "tags_all": {
              "Name": "newigw"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:route-table/rtb-0c7717d154dfd9258",
            "id": "rtb-0c7717d154dfd9258",
            "owner_id": "901933808075",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private RT"
            },
            "tags_all": {
              "Name": "Private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:route-table/rtb-04cca3ce1f8983a55",
            "id": "rtb-04cca3ce1f8983a55",
            "owner_id": "901933808075",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3f4b11f40446267",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public RT"
            },
            "tags_all": {
              "Name": "Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.newigw",
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e296002fe2a6943d",
            "route_table_id": "rtb-04cca3ce1f8983a55",
            "subnet_id": "subnet-069c3c668ea321170"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_route_table.publicrt",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f91043665a855f8c",
            "route_table_id": "rtb-04cca3ce1f8983a55",
            "subnet_id": "subnet-0153960d139508de4"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_route_table.publicrt",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf4befed59d03d58",
            "route_table_id": "rtb-0c7717d154dfd9258",
            "subnet_id": "subnet-0b9e13d73bda2c63b"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_route_table.publicrt",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0742f2bb13cfe11ce",
            "route_table_id": "rtb-0c7717d154dfd9258",
            "subnet_id": "subnet-080bd83e58ed20764"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_route_table.publicrt",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010c8551dea1c390c",
            "route_table_id": "rtb-0c7717d154dfd9258",
            "subnet_id": "subnet-04d67a8bb6d12b190"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_route_table.publicrt",
            "aws_subnet.subnets"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af448eddcedd5f57",
            "route_table_id": "rtb-0c7717d154dfd9258",
            "subnet_id": "subnet-06e438be0f0b6acdf"
          },
          "dependencies": [
            "aws_route_table.privatert",
            "aws_route_table.publicrt",
            "aws_subnet.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "appsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:security-group/sg-04103e5a9184b86cf",
            "description": "Created by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04103e5a9184b86cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220531193615839900000001",
            "name_prefix": "terraform-",
            "owner_id": "901933808075",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "App Sg"
            },
            "tags_all": {
              "Name": "App Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:security-group/sg-05eb2ca0974343644",
            "description": "Created by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05eb2ca0974343644",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220531193615933900000002",
            "name_prefix": "terraform-",
            "owner_id": "901933808075",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Sg"
            },
            "tags_all": {
              "Name": "Web Sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:subnet/subnet-069c3c668ea321170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069c3c668ea321170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901933808075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:subnet/subnet-0153960d139508de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0153960d139508de4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901933808075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:subnet/subnet-0b9e13d73bda2c63b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9e13d73bda2c63b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901933808075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1"
            },
            "tags_all": {
              "Name": "app1"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:subnet/subnet-080bd83e58ed20764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080bd83e58ed20764",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901933808075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app2"
            },
            "tags_all": {
              "Name": "app2"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:subnet/subnet-04d67a8bb6d12b190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d67a8bb6d12b190",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901933808075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:subnet/subnet-06e438be0f0b6acdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e438be0f0b6acdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901933808075",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "vpc_id": "vpc-0af54e523140dd2a3"
          },
          "dependencies": [
            "aws_vpc.newvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:901933808075:vpc/vpc-0af54e523140dd2a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032d90bfb07aa7279",
            "default_route_table_id": "rtb-0f7739e56ebbaba08",
            "default_security_group_id": "sg-0ec86b261d1861ea0",
            "dhcp_options_id": "dopt-81d8a3fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0af54e523140dd2a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7739e56ebbaba08",
            "owner_id": "901933808075",
            "tags": {
              "Name": "newvpc"
            },
            "tags_all": {
              "Name": "newvpc"
            }
          }
        }
      ]
    }
  ]
}